[metadata]
name = klarg
version = 0.0.8
author = Tomi Adenekan
author_email = tominekan@outlook.com
description = A simple command line argument parsing library
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/tominekan/klarg
project_urls = 
    Bug Tracker = https://github.com/tominekan/klarg/issues
classifiers = 
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable

[options]
python_requires = >=3.7
